--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "next": "^13.5.6",
+    "raw-loader": "^4.0.2",
     "react": "18.2.0",
     "react-awesome-reveal": "^4.2.3",
     "react-dom": "18.2.0",
